@@ -1,3 +1,8 @@
+24 July 2007
+
+* Embedding an undefined macro in a string with ${} is no longer an error, it
+  is just treated as empty. This makes ifdef/endif more useful.
+
 17 July 2007
 
 * Only store shared filename (NAME_MAX) in struct shm and construct path into
@@ -471,4 +476,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.119 2007-07-22 14:29:25 nicm Exp $
+$Id: CHANGES,v 1.120 2007-07-23 23:13:35 nicm Exp $
